--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 src/app/test/
 
-Grammar-rules-checking/grammarRules/CompiledFiles/*
+Grammar-rules-checking/grammarRules/CompiledFiles/** 
 !Grammar-rules-checking/grammarRules/CompiledFiles/.gitkeep
 # dependencies
 /node_modules
@@ -44,3 +44,6 @@ yarn-error.log*
 next-env.d.ts
 
 db.json
+
+__pycache__/
+*.pyc
