--- a/my-react-app/.gitignore
+++ b/my-react-app/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore all compiled Python files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Optional: ignore ANTLR compiled files (nếu bạn dùng ANTLR)
+*.interp
+*.tokens
+*.jar
